2005-10-13 Niklas Knutsson  <nq@altern.org>

	* Fix help display with new yelp

2005-10-11 Niklas Knutsson  <nq@altern.org>

	* Change alignment in entries in base and units dialogs
	* Fix result text cropping in pango >= 1.10.0 (add inc_rect.x to inc_rect.width)

2005-10-05 Niklas Knutsson  <nq@altern.org>

	* Add -export-dynamic to LDFLAGS to fix libglade without libgnome
	* Option to change wget arguments in preferences dialog

2005-06-10 Niklas Knutsson  <nq@altern.org>

	* Check that prefix name can be displayed
	* Close gnuplot and disable save button when no series defined

2005-06-09 Niklas Knutsson  <nq@altern.org>

	* Use number base for expression parsing when printing parsed expression
	* Support for "e" instead of "E" in result

2005-06-08 Niklas Knutsson  <nq@altern.org>

	* Display correct equals in history on updated display format

2005-06-05 Niklas Knutsson  <nq@altern.org>

	* Reload also recent composite units and getActive...
	* Bitwise NOT (~)
	* xor() and bitXor()

2005-06-03 Niklas Knutsson  <nq@altern.org>

	* Bitwise AND (&), OR (|), XOR
	* Remove old giac stuff

2005-05-15 Niklas Knutsson  <nq@altern.org>

	* Max values seem to have been lost a long time ago -- add them again

2005-05-07 Niklas Knutsson  <nq@altern.org>

	* Initialize ids_i
	* Fix documentation typos
	* Fix includes.h for gcc-4.0

2005-03-06 Niklas Knutsson  <nq@altern.org>

	* 5e2 = 5E2 = 500 and 5e = 5*e

2005-02-08 Niklas Knutsson  <nq@altern.org>
	
	* Update solve2()

2005-02-06 Niklas Knutsson  <nq@altern.org>

	* Dialog with buttons works in gtk+-2.6.2
	* Do not look at function arguments in contains... functions

2005-02-02 Niklas Knutsson  <nq@altern.org>

	* Update integration and differentiation (sin(x) != sin(x)*rad) after change in sin() and cos() behaviour

2005-01-25 Niklas Knutsson  <nq@altern.org>

	* Fix RPN crash and don't add lonely stack value to itself
	* Workaround freeze with message dialog without buttons
