@@ -1,3 +1,7 @@
+2005-10-17 Niklas Knutsson  <nq@altern.org>
+
+	* Display parsing and function hints under the expression entry to the left
+
 2005-10-13 Niklas Knutsson  <nq@altern.org>
 
 	* Fix help display with new yelp
